# FinGuard-

./: .editorconfig  .env.example  .gitignore  README.md  UI.txt  UI_shift_plan.txt  app.json  example.jsx  insightEngine.js  package-lock.json  package.json  plan.txt  release-checklist.md  render.yaml  tailwind.config.js  verify_gemini.py  vocabulary_simplification_plan.txt
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260329_0001_initial_schema.py  20260329_0002_review_and_normalized.py
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: router.py
backend/app/core/: config.py  logging.py
backend/app/db/: bootstrap.py  session.py
backend/app/models/: __init__.py  base.py  entities.py
backend/app/repositories/: action_repository.py  derived_data_repository.py  extracted_data_repository.py  job_repository.py  normalized_profile_repository.py  profile_repository.py  score_history_repository.py  user_repository.py
backend/app/schemas/: analysis.py  common.py  documents.py  jobs.py  uploads.py
backend/app/services/: analysis.py  bootstrap.py  classifier.py  document_service.py  document_validation.py  engine_client.py  extraction_pipeline.py  extractor.py  gemini_client.py  normalization.py  ocr_service.py  parsers.py  pdf_text_extractor.py  regex_extractors.py  storage.py  (+1 more)
backend/tests/: conftest.py  test_analysis.py  test_documents.py  test_engine_client.py  test_extraction_pipeline.py  test_health.py  test_logic_units.py  test_repositories.py  test_uploads.py
(+65 files in other folders)
